--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,3 +4,11 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+qrcode = "0.14"
+image = "0.25"
+clap = { version = "4.5", features = ["derive"] }
+dialoguer = "0.11"
+anyhow = "1.0"
+base64 = "0.22"
+cli-clipboard = "0.4"
+csscolorparser = "0.6"
